fixex the authentication and also the overflow scroll in lesson and profiles boxes

--- a/teachme/app/assets/stylesheets/application.css
+++ b/teachme/app/assets/stylesheets/application.css
@@ -50,3 +50,8 @@ body {
   margin-top: 2rem;
   padding: 1rem;
 }
+
+.overflow-box {
+  overflow: scroll;
+  overflow-x: hidden;
+}
